--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "license": "MIT",
   "scripts": {
     "start": "NODE_ENV=development webpack",
-    "build": "NODE_ENV=production webpack"
+    "build": "NODE_ENV=production webpack",
+    "stylelint": "stylelint ./src/scss/**/*.scss"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
