--- a/package.json
+++ b/package.json
@@ -7,33 +7,33 @@
   "author": "Christoffer Palm <christoffer.palm@oddhill.se>",
   "license": "MIT",
   "scripts": {
-    "start": "NODE_ENV=development webpack",
-    "build": "NODE_ENV=production webpack",
+    "start": "NODE_ENV=development webpack --mode=development",
+    "build": "NODE_ENV=production webpack --mode=production",
     "eslint": "eslint ./src",
     "stylelint": "stylelint ./src/scss/**/*.scss"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "normalize.css": "^7.0.0"
+    "normalize.css": "^8.0.0"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.6",
+    "autoprefixer": "^8.2.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
-    "browser-sync": "^2.18.13",
     "css-loader": "^0.28.7",
     "eslint": "^4.9.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "^4.0.0",
     "file-loader": "^1.1.5",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.8",
     "sass-loader": "^6.0.6",
-    "stylelint": "^8.2.0",
-    "stylelint-config-sass-guidelines": "^3.1.0",
-    "webpack": "^3.8.1",
+    "stylelint": "^9.2.0",
+    "stylelint-config-sass-guidelines": "^5.0.0",
+    "webpack": "^4.5.0",
+    "webpack-cli": "^2.0.14",
     "webpack-merge": "^4.1.0"
   }
 }
