--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "eslint": "^4.9.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
-    "extract-text-webpack-plugin": "^4.0.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta",
     "file-loader": "^1.1.5",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.8",
