Added basic support for a component based workflow
This will require some additional configuration of Webpack and the component module needs to be installed in the main project.

https://www.drupal.org/project/components

--- a/oddbaby.info.yml
+++ b/oddbaby.info.yml
@@ -7,6 +7,11 @@ regions:
   content: Content
   footer: Footer
 
+component-libraries:
+  oddbaby-components:
+    paths:
+      - components
+
 libraries:
   - oddbaby/font.source-sans-pro
   - oddbaby/icons.font-awesome
