--- a/package.json
+++ b/package.json
@@ -14,27 +14,27 @@
   },
   "browserslist": "last 2 versions",
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
+    "@babel/polyfill": "^7.0.0",
     "normalize.css": "^8.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta",
-    "@babel/preset-env": "^7.0.0-beta",
-    "autoprefixer": "^8.2.0",
-    "babel-loader": "^8.0.0-beta.2",
-    "css-loader": "^0.28.7",
-    "eslint": "^4.9.0",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.8.0",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "autoprefixer": "^9.0.0",
+    "babel-loader": "^8.0.0",
+    "css-loader": "^1.0.0",
+    "eslint": "^5.0.0",
+    "eslint-config-airbnb-base": "^13.0.0",
+    "eslint-plugin-import": "^2.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta",
-    "file-loader": "^1.1.5",
-    "node-sass": "^4.5.3",
-    "postcss-loader": "^2.0.8",
-    "sass-loader": "^6.0.6",
-    "stylelint": "^9.2.0",
+    "file-loader": "^2.0.0",
+    "node-sass": "^4.0.0",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^7.0.0",
+    "stylelint": "^9.0.0",
     "stylelint-config-sass-guidelines": "^5.0.0",
-    "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14",
-    "webpack-merge": "^4.1.0"
+    "webpack": "^4.0.0",
+    "webpack-cli": "^3.0.0",
+    "webpack-merge": "^4.0.0"
   }
 }
