Replaced extract text plugin with mini css extract plugin

--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "eslint": "^5.0.0",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-plugin-import": "^2.0.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta",
     "file-loader": "^2.0.0",
+    "mini-css-extract-plugin": "^0.4.2",
     "node-sass": "^4.0.0",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.0.0",
