--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "author": "Christoffer Palm <christoffer.palm@oddhill.se>",
   "license": "MIT",
   "scripts": {
-    "start": "NODE_ENV=development webpack --mode=development",
-    "build": "NODE_ENV=production webpack --mode=production",
+    "start": "NODE_ENV=development webpack",
+    "build": "NODE_ENV=production webpack",
     "eslint": "eslint ./src",
     "stylelint": "stylelint ./src/scss/**/*.scss"
   },
@@ -29,10 +29,12 @@
     "file-loader": "^2.0.0",
     "mini-css-extract-plugin": "^0.4.2",
     "node-sass": "^4.0.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.0.0",
     "stylelint": "^9.0.0",
     "stylelint-config-sass-guidelines": "^5.0.0",
+    "uglifyjs-webpack-plugin": "^1.3.0",
     "webpack": "^4.0.0",
     "webpack-cli": "^3.0.0",
     "webpack-merge": "^4.0.0"
