--- a/oddbaby.libraries.yml
+++ b/oddbaby.libraries.yml
@@ -5,7 +5,7 @@ global:
       build/css/main.css: { minified: true }
       build/css/print.css: { media: print }
   js:
-    build/js/bundle.js: { minified: true }
+    build/js/main.js: { minified: true }
   dependencies:
     - core/jquery
     - core/drupal
