--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "start": "NODE_ENV=development webpack",
     "build": "NODE_ENV=production webpack",
     "eslint": "eslint ./src",
-    "stylelint": "stylelint ./src/scss/**/*.scss"
+    "eslint-ci": "eslint ./src --format junit -o ~/reports/eslint.xml",
+    "stylelint": "stylelint ./src/scss/**/*.scss",
+    "stylelint-ci": "stylelint ./src/scss/**/*.scss --custom-formatter=./node_modules/stylelint-junit-formatter > ~/reports/stylelint.xml"
   },
   "browserslist": "defaults",
   "dependencies": {
@@ -34,6 +36,7 @@
     "sass-loader": "^7.0.0",
     "stylelint": "^9.0.0",
     "stylelint-config-sass-guidelines": "^5.0.0",
+    "stylelint-junit-formatter": "^0.2.1",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "webpack": "^4.0.0",
     "webpack-cli": "^3.0.0",
