--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "postcss-loader": "^3.0.0",
+    "postcss": "^8.3.6",
+    "postcss-loader": "^6.1.1",
     "prettier": "^1.18.2",
     "sass-loader": "^7.0.0",
     "stylelint": "^10.1.0",
