Changed packaged to handle sass

--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
     "eslint-plugin-import": "^2.0.0",
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^2.2.0",
-    "node-sass": "^4.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss": "^8.3.6",
     "postcss-loader": "^6.1.1",
     "prettier": "^1.18.2",
-    "sass-loader": "^7.0.0",
+    "sass": "^1.37.5",
+    "sass-loader": "^12.1.0",
     "stylelint": "^10.1.0",
     "stylelint-config-sass-guidelines": "^6.0.0",
     "stylelint-junit-formatter": "^0.2.1",
