--- a/oddbaby.libraries.yml
+++ b/oddbaby.libraries.yml
@@ -6,8 +6,6 @@ global:
       build/css/print.css: { media: print }
   js:
     build/js/main.js: { minified: true }
-    build/js/ckeditor.js: { minified: true }
-    build/js/print.js: { minified: true }
   dependencies:
     - core/jquery
     - core/drupal
@@ -19,7 +17,8 @@ font.source-sans-pro:
   license: Open Font License
   css:
     theme:
-      https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700: { external: true, minified: true }
+      https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700:
+        { external: true, minified: true }
 
 # External icons from font awesome.
 icons.font-awesome:
