--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "stylelint": "^13.13.1",
     "stylelint-config-sass-guidelines": "^8.0.0",
     "stylelint-junit-formatter": "^0.2.1",
-    "uglifyjs-webpack-plugin": "^2.2.0",
+    "terser-webpack-plugin": "^5.1.4",
     "webpack": "^5.50.0",
     "webpack-cli": "^4.7.2",
     "webpack-merge": "^4.0.0"
