--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,12 @@
 {
   "root": true,
-  "extends": "airbnb-base"
+  "extends": "eslint:recommended",
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  }
 }
