--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "eslint": "eslint ./src",
     "eslint-ci": "eslint ./src --format junit -o ./reports/eslint.xml",
     "stylelint": "stylelint ./src/scss/**/*.scss",
-    "stylelint-ci": "stylelint ./src/scss/**/*.scss --custom-formatter=./node_modules/stylelint-junit-formatter > ./reports/stylelint.xml"
+    "stylelint-ci": "stylelint ./src/scss/**/*.scss --custom-formatter=./node_modules/stylelint-junit-formatter > ./reports/stylelint.xml",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "browserslist": "defaults",
   "dependencies": {
     "bootstrap": "^5.1.0",
     "core-js": "^3.2.1",
+    "date-fns": "^2.25.0",
     "normalize.css": "^8.0.0",
     "regenerator-runtime": "^0.13.3",
     "webpack-remove-empty-scripts": "^0.7.1"
@@ -28,10 +31,17 @@
   "devDependencies": {
     "@babel/core": "^7.5.0",
     "@babel/preset-env": "^7.5.0",
+    "@storybook/addon-actions": "^6.3.12",
+    "@storybook/addon-essentials": "^6.3.12",
+    "@storybook/addon-links": "^6.3.12",
+    "@storybook/builder-webpack5": "^6.3.12",
+    "@storybook/html": "^6.3.12",
+    "@storybook/manager-webpack5": "^6.3.12",
     "autoprefixer": "^10.3.1",
     "babel-loader": "^8.0.0",
-    "css-loader": "^6.2.0",
+    "css-loader": "^6.5.0",
     "css-minimizer-webpack-plugin": "^3.0.2",
+    "drupal-attribute": "^1.0.2",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.0.0",
@@ -40,12 +50,15 @@
     "postcss": "^8.3.6",
     "postcss-loader": "^6.1.1",
     "prettier": "^2.3.2",
-    "sass": "^1.37.5",
-    "sass-loader": "^12.1.0",
+    "sass": "^1.43.4",
+    "sass-loader": "^12.3.0",
+    "style-loader": "^3.3.1",
     "stylelint": "^13.13.1",
     "stylelint-config-sass-guidelines": "^8.0.0",
     "stylelint-junit-formatter": "^0.2.1",
     "terser-webpack-plugin": "^5.1.4",
+    "twig": "^1.15.4",
+    "twig-loader": "^0.5.5",
     "webpack": "^5.50.0",
     "webpack-cli": "^4.7.2",
     "webpack-merge": "^5.8.0"
