--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "browserslist": "defaults",
   "dependencies": {
     "bootstrap": "^5.1.0",
+    "classnames": "^2.3.1",
     "core-js": "^3.2.1",
     "date-fns": "^2.25.0",
     "normalize.css": "^8.0.0",
