--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,15 @@
 {
   "presets": [
-    ["@babel/preset-env", {
-      "useBuiltIns": "usage",
-      "corejs": {
-        "version": 3,
-        "proposals": true
+    "@babel/preset-typescript",
+    [
+      "@babel/preset-env",
+      {
+        "useBuiltIns": "usage",
+        "corejs": {
+          "version": 3,
+          "proposals": true
+        }
       }
-    }]
+    ]
   ]
 }
