--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@babel/core": "^7.5.0",
     "@babel/preset-env": "^7.5.0",
+    "@babel/preset-typescript": "^7.21.4",
     "autoprefixer": "^10.3.1",
     "babel-loader": "^8.0.0",
     "css-loader": "^6.2.0",
@@ -46,6 +47,7 @@
     "stylelint-config-sass-guidelines": "^8.0.0",
     "stylelint-junit-formatter": "^0.2.1",
     "terser-webpack-plugin": "^5.1.4",
+    "typescript": "^5.0.4",
     "webpack": "^5.50.0",
     "webpack-cli": "^4.7.2",
     "webpack-merge": "^5.8.0"
