--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,6 @@
 {
-  "root": true,
-  "extends": "airbnb-base"
+  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint"],
+  "root": true
 }
