--- a/package.json
+++ b/package.json
@@ -22,19 +22,19 @@
     "bootstrap": "^5.1.0",
     "core-js": "^3.2.1",
     "normalize.css": "^8.0.0",
-    "regenerator-runtime": "^0.13.3",
-    "webpack-remove-empty-scripts": "^0.7.1"
+    "regenerator-runtime": "^0.13.3"
   },
   "devDependencies": {
     "@babel/core": "^7.5.0",
     "@babel/preset-env": "^7.5.0",
     "@babel/preset-typescript": "^7.21.4",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
     "autoprefixer": "^10.3.1",
     "babel-loader": "^8.0.0",
     "css-loader": "^6.2.0",
     "css-minimizer-webpack-plugin": "^3.0.2",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint": "^8.38.0",
     "eslint-plugin-import": "^2.0.0",
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^2.2.0",
@@ -50,6 +50,7 @@
     "typescript": "^5.0.4",
     "webpack": "^5.50.0",
     "webpack-cli": "^4.7.2",
-    "webpack-merge": "^5.8.0"
+    "webpack-merge": "^5.8.0",
+    "webpack-remove-empty-scripts": "^1.0.3"
   }
 }
