--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "node": "18.*"
   },
   "scripts": {
-    "start": "NODE_ENV=development webpack",
+    "dev": "NODE_ENV=development webpack",
+    "start": "yarn dev",
     "build": "NODE_ENV=production webpack",
     "eslint": "eslint ./src",
     "eslint-ci": "eslint ./src --format junit -o ./reports/eslint.xml",
@@ -28,9 +29,10 @@
     "@babel/core": "^7.5.0",
     "@babel/preset-env": "^7.5.0",
     "@babel/preset-typescript": "^7.21.4",
+    "@tailwindcss/typography": "^0.5.10",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
-    "autoprefixer": "^10.3.1",
+    "autoprefixer": "^10.4.16",
     "babel-loader": "^8.0.0",
     "css-loader": "^6.2.0",
     "css-minimizer-webpack-plugin": "^3.0.2",
@@ -38,14 +40,16 @@
     "eslint-plugin-import": "^2.0.0",
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^2.2.0",
-    "postcss": "^8.3.6",
+    "postcss": "^8.4.31",
     "postcss-loader": "^6.1.1",
-    "prettier": "^2.3.2",
+    "prettier": "^3.1.0",
+    "prettier-plugin-tailwindcss": "^0.5.7",
     "sass": "^1.37.5",
     "sass-loader": "^12.1.0",
     "stylelint": "^13.13.1",
     "stylelint-config-sass-guidelines": "^8.0.0",
     "stylelint-junit-formatter": "^0.2.1",
+    "tailwindcss": "^3.3.3",
     "terser-webpack-plugin": "^5.1.4",
     "typescript": "^5.0.4",
     "webpack": "^5.50.0",
